--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid" id="c-2">
   <div class="row d-flex justify-content-center">
     <div
-      class="col-3"
+      class="col-6 col-md-3"
       *ngFor="let p of products"
       (click)="shopnow(p.productid)"
     >
@@ -17,7 +17,7 @@
       </div>
     </div>
 
-    <div class="col-3">
+    <div class="col-6 col-md-3">
       <div class="card">
         <img src="../assets/p2.jpg" alt="" />
       </div>
@@ -29,7 +29,7 @@
         <i class="bi bi-heart"></i>
       </div>
     </div>
-    <div class="col-3">
+    <div class="col-6 col-md-3">
       <div class="card">
         <img src="../assets/p3.jpg" alt="" />
       </div>
@@ -42,7 +42,7 @@
       </div>
     </div>
 
-    <div class="col-3">
+    <div class="col-6 col-md-3">
       <div class="card">
         <img src="../assets/p4.jpg" alt="" />
       </div>
@@ -55,7 +55,7 @@
       </div>
     </div>
 
-    <div class="col-3">
+    <div class="col-6 col-md-3">
       <div class="card">
         <img src="../assets/p-1.jpg" alt="" />
       </div>
@@ -67,7 +67,7 @@
         <i class="bi bi-heart"></i>
       </div>
     </div>
-    <div class="col-3">
+    <div class="col-6 col-md-3">
       <div class="card">
         <img src="../assets/p2.jpg" alt="" />
       </div>
@@ -79,7 +79,7 @@
         <i class="bi bi-heart"></i>
       </div>
     </div>
-    <div class="col-3">
+    <div class="col-6 col-md-3">
       <div class="card">
         <img src="../assets/p3.jpg" alt="" />
       </div>
@@ -92,7 +92,7 @@
       </div>
     </div>
 
-    <div class="col-3">
+    <div class="col-6 col-md-3">
       <div class="card">
         <img src="../assets/p4.jpg" alt="" />
       </div>
