--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,3 +1,26 @@
+<div class="container-fluid" id="con1">
+  <div class="row">
+    <div class="col-1 d-none d-md-block"></div>
+    <div #content class="col-12 col-md-7 content">
+      <div class="text">
+        <h5>FASTEST GROWING</h5>
+        <h3>
+          Luxurious & Premium <br />
+          Products
+        </h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque velit
+          <br />
+          a atque unde aperiam, praesentium, veritatis voluptaa?
+        </p>
+
+        <button class="btn animated-btn">Browse Collections</button>
+      </div>
+    </div>
+    <div #content class="col-12 col-md-4 content"></div>
+  </div>
+</div>
+
 <div #content class="container-fluid content" id="con11">
   <div class="marquee">
     <div class="marquee-content">
@@ -20,7 +43,7 @@
   </div>
 </div>
 
-<!-- <app-about></app-about> -->
+<app-about></app-about>
 <div class="container-fluid" id="con3">
   <div #content class="header text-center content my-5">
     <h4>Best Products</h4>
@@ -74,7 +97,7 @@
   </div>
 </div>
 
-<!-- <div class="container-fluid" id="con4">
+<div class="container-fluid" id="con4">
   <div class="row">
     <div #content class="col-12 col-md-4 content">
       <div class="box1">
@@ -120,10 +143,42 @@
       </div>
     </div>
   </div>
-</div> -->
+</div>
 
 <app-gellary></app-gellary>
 <app-newstore></app-newstore>
+<div class="container-fluid" id="con81">
+  <div class="container-fluid" id="con8">
+    <div #content class="header text-center content">
+      <h6>BEST IN MARKET</h6>
+      <h2>Healthiest Cosmetics</h2>
+    </div>
+    <div class="row">
+      <div class="col-6 col-md-6 text-center">
+        <div class="products">4300k</div>
+        <div class="name">Products Sold</div>
+      </div>
+      <div class="col-6 col-md-6 text-center">
+        <div class="products">99.99 %</div>
+        <div class="name">Satisfaction Guranteed</div>
+      </div>
+      <div class="col-6 col-md-6 text-center">
+        <div class="products">42 K</div>
+        <div class="name">Customers Satisfied</div>
+      </div>
+      <div class="col-6 col-md-6 text-center">
+        <div class="products">0.01 %</div>
+        <div class="name">Defective Returns</div>
+      </div>
+    </div>
+    <p class="text-center my-5">
+      Fusce id aliquet justo. Etiam aliquet elit eleifend quam commodo sagittis.
+      Quisque dapibus nulla in <br />
+      blandit dictum. Quisque dapibus nulla in blandit dictum.
+    </p>
+  </div>
+</div>
+
 <div class="container" id="con7">
   <div #content class="head text-center content">
     <span>TESTIMONIALS</span>
@@ -251,37 +306,6 @@
         </button>
       </div>
     </div>
-  </div>
-</div>
-<div class="container-fluid" id="con81">
-  <div class="container-fluid" id="con8">
-    <div #content class="header text-center content">
-      <h6>BEST IN MARKET</h6>
-      <h2>Healthiest Cosmetics</h2>
-    </div>
-    <div class="row">
-      <div class="col-6 col-md-6 text-center">
-        <div class="products">4300k</div>
-        <div class="name">Products Sold</div>
-      </div>
-      <div class="col-6 col-md-6 text-center">
-        <div class="products">99.99 %</div>
-        <div class="name">Satisfaction Guranteed</div>
-      </div>
-      <div class="col-6 col-md-6 text-center">
-        <div class="products">42 K</div>
-        <div class="name">Customers Satisfied</div>
-      </div>
-      <div class="col-6 col-md-6 text-center">
-        <div class="products">0.01 %</div>
-        <div class="name">Defective Returns</div>
-      </div>
-    </div>
-    <p class="text-center my-5">
-      Fusce id aliquet justo. Etiam aliquet elit eleifend quam commodo sagittis.
-      Quisque dapibus nulla in <br />
-      blandit dictum. Quisque dapibus nulla in blandit dictum.
-    </p>
   </div>
 </div>
 
