--- a/src/app/user-products/user-products.component.html
+++ b/src/app/user-products/user-products.component.html
@@ -1,4 +1,3 @@
-<app-navbar></app-navbar>
 <div class="container-fluid" id="con1">
   <div class="container-fluid">
     <h2 class="">shop now</h2>
@@ -7,7 +6,7 @@
 
 <div class="container" id="con2">
   <div class="row">
-    <div class="col">
+    <div class="col-6 col-md-4">
       <div class="box">
         <div class="dropdown">
           <button
@@ -27,18 +26,8 @@
         </div>
       </div>
     </div>
-    <div class="col">
-      <div class="box d-flex">
-        <input
-          type="search"
-          name=""
-          id=""
-          placeholder="search products/brands..."
-        />
-        <i class="bi bi-search"></i>
-      </div>
-    </div>
-    <div class="col">
+
+    <div class="col-6 col-md-4">
       <div class="box justify-content-end d-flex">
         <div class="dropdown">
           <button
@@ -56,6 +45,17 @@
             <div class="dropdown-item">hight price</div>
           </div>
         </div>
+      </div>
+    </div>
+    <div class="col-12 col-md-4">
+      <div class="box d-flex">
+        <input
+          type="search"
+          name=""
+          id=""
+          placeholder="search products/brands..."
+        />
+        <i class="bi bi-search"></i>
       </div>
     </div>
   </div>
