--- a/src/app/apistest/apistest.component.html
+++ b/src/app/apistest/apistest.component.html
@@ -1,11 +1,453 @@
-<p>Page {{ readdata?.page }} of {{ readdata?.total_pages }}</p>
-<p>Total Users: {{ readdata?.total }}</p>
-<div *ngIf="readdata">
-  <p>Page {{ readdata.page }} of {{ readdata.total_pages }}</p>
-  <p>Total Users: {{ readdata.total }}</p>
-  <div *ngFor="let user of readdata.data">
-    <h2>{{ user.first_name }} {{ user.last_name }}</h2>
-    <p>Email: {{ user.email }}</p>
-    <img src="{{ user.avatar }}" alt="User Avatar" />
+<div class="container-fluid" id="con6">
+  <div #content class="header text-center content">
+    <h6>BRANDED COSMETICS</h6>
+    <h2>New Arrivals on Store</h2>
+  </div>
+  <div class="container-fluid" id="car">
+    <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li
+          data-bs-target="#myCarousel"
+          data-bs-slide-to="0"
+          class="active"
+        ></li>
+        <li data-bs-target="#myCarousel" data-bs-slide-to="1"></li>
+        <li data-bs-target="#myCarousel" data-bs-slide-to="2"></li>
+      </ol>
+
+      <!-- Wrapper for slides -->
+
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <div class="row">
+            <div #content class="col-12 col-md-4 content">
+              <div class="box">
+                <h3>Body Essentials</h3>
+                <div class="card">
+                  <img src="../assets/soap.jpg" alt="" />
+                  <div class="details">
+                    <h5>Beauty Bar</h5>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star"></i>
+
+                    <div class="price">570/-</div>
+                  </div>
+                </div>
+                <div class="card">
+                  <img src="../assets/soap.jpg" alt="" />
+                  <div class="details">
+                    <h5>Beauty Bar</h5>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star"></i>
+
+                    <div class="price">570/-</div>
+                  </div>
+                </div>
+                <div class="card">
+                  <img src="../assets/soap.jpg" alt="" />
+                  <div class="details">
+                    <h5>Beauty Bar</h5>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star"></i>
+
+                    <div class="price">570/-</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div #content class="d-none d-md-block col-md-4 content">
+              <div class="box">
+                <h3>Body Essentials</h3>
+                <div class="card">
+                  <img src="../assets/soap.jpg" alt="" />
+                  <div class="details">
+                    <h5>Beauty Bar</h5>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star"></i>
+
+                    <div class="price">570/-</div>
+                  </div>
+                </div>
+                <div class="card">
+                  <img src="../assets/soap.jpg" alt="" />
+                  <div class="details">
+                    <h5>Beauty Bar</h5>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star"></i>
+
+                    <div class="price">570/-</div>
+                  </div>
+                </div>
+                <div class="card">
+                  <img src="../assets/soap.jpg" alt="" />
+                  <div class="details">
+                    <h5>Beauty Bar</h5>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star"></i>
+
+                    <div class="price">570/-</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div #content class="d-none d-md-block col-md-4 content">
+              <div class="box">
+                <h3>Body Essentials</h3>
+                <div class="card">
+                  <img src="../assets/soap.jpg" alt="" />
+                  <div class="details">
+                    <h5>Beauty Bar</h5>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star"></i>
+
+                    <div class="price">570/-</div>
+                  </div>
+                </div>
+                <div class="card">
+                  <img src="../assets/soap.jpg" alt="" />
+                  <div class="details">
+                    <h5>Beauty Bar</h5>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star"></i>
+
+                    <div class="price">570/-</div>
+                  </div>
+                </div>
+                <div class="card">
+                  <img src="../assets/soap.jpg" alt="" />
+                  <div class="details">
+                    <h5>Beauty Bar</h5>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star"></i>
+
+                    <div class="price">570/-</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="row">
+            <div #content class="col-12 col-md-4 content">
+              <div class="box">
+                <h3>Body Essentials</h3>
+                <div class="card">
+                  <img src="../assets/soap.jpg" alt="" />
+                  <div class="details">
+                    <h5>Beauty Bar</h5>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star"></i>
+
+                    <div class="price">570/-</div>
+                  </div>
+                </div>
+                <div class="card">
+                  <img src="../assets/soap.jpg" alt="" />
+                  <div class="details">
+                    <h5>Beauty Bar</h5>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star"></i>
+
+                    <div class="price">570/-</div>
+                  </div>
+                </div>
+                <div class="card">
+                  <img src="../assets/soap.jpg" alt="" />
+                  <div class="details">
+                    <h5>Beauty Bar</h5>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star"></i>
+
+                    <div class="price">570/-</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div #content class="d-none d-md-block col-md-4 content">
+              <div class="box">
+                <h3>Body Essentials</h3>
+                <div class="card">
+                  <img src="../assets/soap.jpg" alt="" />
+                  <div class="details">
+                    <h5>Beauty Bar</h5>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star"></i>
+
+                    <div class="price">570/-</div>
+                  </div>
+                </div>
+                <div class="card">
+                  <img src="../assets/soap.jpg" alt="" />
+                  <div class="details">
+                    <h5>Beauty Bar</h5>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star"></i>
+
+                    <div class="price">570/-</div>
+                  </div>
+                </div>
+                <div class="card">
+                  <img src="../assets/soap.jpg" alt="" />
+                  <div class="details">
+                    <h5>Beauty Bar</h5>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star"></i>
+
+                    <div class="price">570/-</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div #content class="col-md-4 d-none d-md-block content">
+              <div class="box">
+                <h3>Body Essentials</h3>
+                <div class="card">
+                  <img src="../assets/soap.jpg" alt="" />
+                  <div class="details">
+                    <h5>Beauty Bar</h5>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star"></i>
+
+                    <div class="price">570/-</div>
+                  </div>
+                </div>
+                <div class="card">
+                  <img src="../assets/soap.jpg" alt="" />
+                  <div class="details">
+                    <h5>Beauty Bar</h5>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star"></i>
+
+                    <div class="price">570/-</div>
+                  </div>
+                </div>
+                <div class="card">
+                  <img src="../assets/soap.jpg" alt="" />
+                  <div class="details">
+                    <h5>Beauty Bar</h5>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star"></i>
+
+                    <div class="price">570/-</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="carousel-item">
+          <div class="row">
+            <div #content class="col-12 col-md-4 content">
+              <div class="box">
+                <h3>Body Essentials</h3>
+                <div class="card">
+                  <img src="../assets/soap.jpg" alt="" />
+                  <div class="details">
+                    <h5>Beauty Bar</h5>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star"></i>
+
+                    <div class="price">570/-</div>
+                  </div>
+                </div>
+                <div class="card">
+                  <img src="../assets/soap.jpg" alt="" />
+                  <div class="details">
+                    <h5>Beauty Bar</h5>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star"></i>
+
+                    <div class="price">570/-</div>
+                  </div>
+                </div>
+                <div class="card">
+                  <img src="../assets/soap.jpg" alt="" />
+                  <div class="details">
+                    <h5>Beauty Bar</h5>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star"></i>
+
+                    <div class="price">570/-</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div #content class="d-none d-md-block col-md-4 content">
+              <div class="box">
+                <h3>Body Essentials</h3>
+                <div class="card">
+                  <img src="../assets/soap.jpg" alt="" />
+                  <div class="details">
+                    <h5>Beauty Bar</h5>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star"></i>
+
+                    <div class="price">570/-</div>
+                  </div>
+                </div>
+                <div class="card">
+                  <img src="../assets/soap.jpg" alt="" />
+                  <div class="details">
+                    <h5>Beauty Bar</h5>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star"></i>
+
+                    <div class="price">570/-</div>
+                  </div>
+                </div>
+                <div class="card">
+                  <img src="../assets/soap.jpg" alt="" />
+                  <div class="details">
+                    <h5>Beauty Bar</h5>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star"></i>
+
+                    <div class="price">570/-</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div #content class="col-md-4 d-none d-md-block content">
+              <div class="box">
+                <h3>Body Essentials</h3>
+                <div class="card">
+                  <img src="../assets/soap.jpg" alt="" />
+                  <div class="details">
+                    <h5>Beauty Bar</h5>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star"></i>
+
+                    <div class="price">570/-</div>
+                  </div>
+                </div>
+                <div class="card">
+                  <img src="../assets/soap.jpg" alt="" />
+                  <div class="details">
+                    <h5>Beauty Bar</h5>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star"></i>
+
+                    <div class="price">570/-</div>
+                  </div>
+                </div>
+                <div class="card">
+                  <img src="../assets/soap.jpg" alt="" />
+                  <div class="details">
+                    <h5>Beauty Bar</h5>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star"></i>
+
+                    <div class="price">570/-</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#myCarousel"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#myCarousel"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
   </div>
 </div>
