--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -11,7 +11,7 @@
         </div>
       </div>
       <div class="col-12 col-md-4 mb-4 mb-md-0">
-        <h1>Beauty Care</h1>
+        <h1 class="text-center">GlowGrove</h1>
       </div>
       <div class="col-12 col-md-4">
         <h3>Contact</h3>
