--- a/src/app/gellary/gellary.component.css
+++ b/src/app/gellary/gellary.component.css
@@ -10,7 +10,6 @@
   margin-left: -12pc;
 }
 #con5 .text {
-  margin-top: 2pc;
   margin-left: 15px;
 }
 #con5 .text h3 {
@@ -50,16 +49,20 @@
 }
 @media (max-width: 768px) {
   #con5 .box img {
-    width: 100%;
+    width: 60%;
     height: auto;
-    margin-top: 40pc;
-    margin-left: -8pc;
-    display: block;
-    object-fit: cover;
+    position: relative;
+    left: 10pc;
+  }
+  #con5 .box {
+    background: url("/assets/right.jpg") no-repeat center center/cover;
+    width: 100%;
+    height: 100%;
   }
 
   #con5 .text {
     margin-left: 0;
+    margin-top: 0;
   }
 
   #con5 .text h3 {
@@ -67,7 +70,8 @@
   }
 
   #con5 .btn {
-    margin-left: 0;
+    margin-left: 5pc;
+    margin-bottom: 2pc;
   }
 
   #con5 table {
