--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -1,3 +1,81 @@
+#con1 {
+  overflow: hidden;
+  background: url("/assets/homebg-1.jpg") no-repeat center center;
+  background-size: cover;
+  height: 100vh;
+  align-items: center;
+}
+
+#con1 .animated-btn {
+  position: relative;
+  padding: 10px 20px;
+  font-size: 16px;
+  color: #fff;
+  background-color: #ffebd4;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  overflow: hidden;
+  outline: none;
+  transition: color 0.4s ease-in, background-color 0.4s ease;
+}
+
+#con1 .animated-btn::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background-color: #2ecc71;
+  transition: left 0.4s ease;
+  z-index: 0;
+}
+
+#con1 .animated-btn:hover::before {
+  left: 0;
+}
+
+#con1 .animated-btn:hover {
+  color: #fff;
+  background-color: transparent;
+}
+
+#con1 .animated-btn span {
+  position: relative;
+  z-index: 1;
+}
+#con1 .row {
+  margin-top: 6pc;
+}
+#con1 .col-5 img {
+  width: 38pc;
+  height: auto;
+}
+#con1 .text h5 {
+  font-size: 25px;
+  margin-top: 8pc;
+  font-weight: 200;
+}
+#con1 .text h3 {
+  font-size: 4rem;
+  font-weight: 600;
+  margin-top: 2pc;
+}
+#con1 .text p {
+  font-style: italic;
+  font-weight: 200;
+  font-size: 18px;
+  margin-top: 1pc;
+}
+#con1 .btn {
+  margin-top: 3pc;
+  font-family: "Times New Roman", Times, serif;
+  border-radius: 0px;
+  background: rgb(228, 220, 193);
+  padding: 10px 45px;
+}
+
 .content {
   opacity: 0;
   transform: translateY(50px);
@@ -39,38 +117,8 @@
   }
 }
 
-#con1 .row {
-  margin-top: 6pc;
-}
-#con1 .col-5 img {
-  width: 38pc;
-  height: auto;
-}
-#con1 .text h5 {
-  font-size: 25px;
-  margin-top: 8pc;
-  font-weight: 200;
-}
-#con1 .text h3 {
-  font-size: 45px;
-  margin-top: 2pc;
-}
-#con1 .text p {
-  font-style: italic;
-  font-weight: 200;
-  font-size: 18px;
-  margin-top: 1pc;
-}
-#con1 .btn {
-  margin-top: 3pc;
-  font-family: "Times New Roman", Times, serif;
-  border-radius: 0px;
-  background: rgb(228, 220, 193);
-  padding: 10px 45px;
-}
-
 #con3 {
-  margin-top: 0pc;
+  margin-top: -20pc;
   margin-bottom: 5pc;
 }
 
@@ -95,7 +143,7 @@
   height: 18pc;
 }
 #con4 .box2 {
-  background: url("/assets/box-2.webp");
+  background: url("/assets/box-2.webp") center center;
   background-size: cover;
   margin-bottom: 15px;
   border: 1px solid;
@@ -132,7 +180,7 @@
 }
 #con4 .names2 {
   margin-top: 4pc;
-  margin-left: 20pc;
+  margin-left: 15pc;
 }
 #con4 .name3 {
   margin-top: 15pc;
@@ -154,7 +202,7 @@
 }
 #con4 {
   margin-top: 10pc;
-  margin-bottom: 5pc;
+  margin-bottom: 0pc;
 }
 
 #con7 .details {
@@ -248,6 +296,28 @@ hr {
   padding: 5px;
 }
 @media (max-width: 768px) {
+  #con1 {
+    background: url("/assets/homebg-1.jpg");
+    background-size: cover;
+    height: auto;
+    padding: 20px;
+  }
+  #con1 .row {
+    margin-top: 0pc;
+  }
+
+  #con1 .animated-btn {
+    font-size: 14px;
+    padding: 8px 15px;
+  }
+
+  #con1 .text h3 {
+    font-size: 1.5rem;
+  }
+
+  #con1 .text p {
+    font-size: 0.9rem;
+  }
   .col-6 img {
     width: 100%;
     height: 50%;
@@ -255,6 +325,9 @@ hr {
   #con3 i {
     font-size: 1.2em;
     color: gold;
+  }
+  #con3 {
+    margin-top: 0;
   }
 
   #con8 .header h6 {
@@ -268,6 +341,9 @@ hr {
 
   #con8 .products {
     font-size: 1.5em;
+  }
+  #con4 {
+    margin-bottom: 0;
   }
 
   #con8 .name {
