--- a/src/app/home1/home1.component.html
+++ b/src/app/home1/home1.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="container-fluid" id="con1">
   <div class="row">
     <div class="col-1 d-none d-md-block"></div>
