--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -13,8 +13,8 @@
       <div class="col-12 col-md-4 mb-4 mb-md-0">
         <h1 class="text-center">GlowGrove</h1>
       </div>
-      <div class="col-12 col-md-4">
-        <h3>Contact</h3>
+      <div class="col-12 col-md-4 d-flex justify-content-end">
+        <h3 class="">Contact</h3>
         <table class="mx-auto mx-md-0">
           <tr>
             <td><i class="bi bi-people-fill"></i></td>
