--- a/src/app/home1/home1.component.html
+++ b/src/app/home1/home1.component.html
@@ -15,7 +15,9 @@
           a atque unde aperiam, praesentium, veritatis voluptaa?
         </p>
 
-        <button class="btn animated-btn">Browse Collections</button>
+        <button class="cssbuttons-io">
+          <span> Browse Collections</span>
+        </button>
       </div>
     </div>
     <div #content class="col-12 col-md-4 content"></div>
@@ -32,7 +34,6 @@
       <img src="../assets/Logo-5.webp" alt="Logo 5" />
       <img src="../assets/Logo-2.webp" alt="Logo 2" />
       <img src="../assets/Logo-4.webp" alt="Logo 4" />
-
       <img src="../assets/brand-logo-2.webp" alt="Logo 2" />
       <img src="../assets/brand-logo-3.webp" alt="Logo 3" />
       <img src="../assets/brand-logo-5.webp" alt="Logo 5" />
