--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,6 +1,6 @@
 <app-home1></app-home1>
 <app-about></app-about>
-<div class="container-fluid" id="con3">
+<div class="container-fluid" id="con3" routerLink="/products">
   <div #content class="header text-center content my-5">
     <h4>Best Products</h4>
     <h2>Body Essentials</h2>
@@ -47,7 +47,7 @@
         <i class="bi bi-star-fill"></i> <i class="bi bi-star-fill"></i>
         <i class="bi bi-star"></i>
 
-        <div class="price">570/-</div>
+        <div class="price">0/-</div>
       </div>
     </div>
   </div>
