--- a/src/app/orderproduct/orderproduct.component.html
+++ b/src/app/orderproduct/orderproduct.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" *ngIf="isform">
   <div class="header">Your Order</div>
   <div class="row">
     <div class="col d-flex justify-content-center">
@@ -17,7 +17,7 @@
   </div>
 </div>
 <hr />
-<div class="container">
+<div class="container" *ngIf="isform">
   <div class="box p-4">
     <div class="header mb-4">Billing Details</div>
     <form [formGroup]="orderform" (ngSubmit)="onSubmit()">
@@ -117,48 +117,22 @@
           </div>
         </div>
 
-        <div class="col-md-6 mb-3">
-          <label for="productId" class="form-label">Product ID</label>
-          <input
-            type="text"
-            class="form-control"
-            id="productId"
-            formControlName="productId"
-          />
-          <div
-            *ngIf="
-              orderform.get('productId').invalid &&
-              orderform.get('productId').touched
-            "
-            class="text-danger"
-          >
-            Product ID is required.
-          </div>
-        </div>
-
-        <div class="col-md-6 mb-3">
-          <label for="quantity" class="form-label">Quantity</label>
-          <input
-            type="text"
-            class="form-control"
-            id="quantity"
-            formControlName="quantity"
-          />
-          <div
-            *ngIf="
-              orderform.get('quantity').invalid &&
-              orderform.get('quantity').touched
-            "
-            class="text-danger"
-          >
-            Quantity is required.
-          </div>
-        </div>
-
         <button type="submit" class="btn btn-primary rounded form-control mt-3">
           Confirm Order
         </button>
       </div>
     </form>
   </div>
+</div>
+
+<div id="successBox" class="success-box" *ngIf="showSuccess">
+  <svg class="checkmark" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
+    <circle class="checkmark__circle" cx="26" cy="26" r="25" fill="none" />
+    <path
+      class="checkmark__check"
+      fill="none"
+      d="M14.1 27.2l7.1 7.2 16.7-16.8"
+    />
+  </svg>
+  <p class="mt-3">Order placed successfully!</p>
 </div>
