--- a/src/app/productdetails/productdetails.component.css
+++ b/src/app/productdetails/productdetails.component.css
@@ -1,8 +1,12 @@
 #con1 {
   background: url("/assets/bread-crumb-img.jpg");
   background-size: cover;
-  height: 60vh;
+  height: auto;
   font-family: "Times New Roman", Times, serif;
+}
+#con1 img {
+  width: 80%;
+  height: auto;
 }
 #con1 .container-fluid {
   padding-top: 5pc;
@@ -12,105 +16,33 @@
 
 #con {
   margin-top: 5pc;
-  height: 75vh;
+  height: auto;
   overflow: hidden;
+}
+#con h1 {
+  font-weight: 500;
+  font-size: 3rem;
 }
 .product-img {
   display: flex;
-
   justify-content: center;
 }
 .product-img img {
   width: 30pc;
   height: auto;
 }
-.details {
-  margin-top: 4pc;
-}
 .details p {
   font-weight: 100;
+  font-size: medium;
 }
-
-button {
+p i {
+  color: gold;
+}
+.row button {
   background: #ecdec1;
   border: 1px solid;
-  padding: 10px 20px;
-  margin-right: 35px;
+  padding: 10px 30px;
 }
-
-/* .product-container {
-  margin-top: 5pc;
-  display: flex;
-  flex-direction: row;
-  padding: 20px;
-}
-
-.product-image img {
-  border-radius: 0px;
-  max-width: 400px;
-  border: 2px solid burlywood;
-}
-
-.product-details {
-  margin-left: 20px;
-  margin-top: 9pc;
-}
-
-.product-name {
-  font-size: 24px;
-  font-weight: bold;
-}
-
-.product-price {
-  font-size: 20px;
-  color: green;
-}
-
-.product-original-price {
-  font-size: 16px;
-  text-decoration: line-through;
-  color: gray;
-}
-
-.product-discount {
-  font-size: 16px;
-  color: red;
-}
-
-.product-description {
-  margin-top: 10px;
-  font-size: 14px;
-}
-
-.quantity {
-  margin-top: 10px;
-}
-
-.product-actions {
-  margin-top: 20px;
-}
-
-.add-to-bag,
-.shop-now {
-  padding: 10px 20px;
-  margin-top: 0pc;
-  margin-right: 3pc;
-  cursor: pointer;
-}
-
-.add-to-bag {
-  background-color: #000;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-}
-
-.shop-now {
-  background-color: #28a745;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-} */
 
 #c-2 {
   margin-top: 5pc;
@@ -126,14 +58,13 @@ button {
 #c-2 .row {
   margin-bottom: 5pc;
 }
-#c-2 .card i {
-  z-index: 1;
-  color: #ffff;
-  position: relative;
-  bottom: 30pc;
-  left: 17pc;
-  font-size: 2rem;
+.price span {
+  font-size: 1rem;
+  font-weight: 200;
+  margin-left: 0pc;
+  color: rgb(228, 140, 154);
 }
+
 #c-2 .card img {
   width: 18pc;
   height: 18pc;
@@ -145,4 +76,50 @@ button {
 .details .cost {
   margin-top: -18px;
   margin-bottom: 10px;
+}
+
+.quantity-control button {
+  background: none;
+  border: none;
+  color: #d7cbb0;
+  font-size: 3rem;
+}
+td {
+  font-size: 1rem;
+  font-weight: 200;
+}
+td .header {
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+
+@media (max-width: 576px) {
+  #con1 {
+    display: flex;
+
+    align-items: center;
+    justify-content: center;
+  }
+  img {
+    margin-top: 20%;
+    margin-left: 10%;
+    width: 100%;
+    height: auto;
+  }
+  .product-img img {
+    padding: 0px 90px 0px 50px;
+  }
+  #con {
+    margin-top: 0pc;
+  }
+  .details {
+    padding-left: 50px;
+    padding: 20px;
+  }
+  button {
+    background: #ecdec1;
+    border: 1px solid;
+    padding: 5px 8px;
+    font-size: medium;
+  }
 }
