--- a/src/app/user-products/user-products.component.html
+++ b/src/app/user-products/user-products.component.html
@@ -1,7 +1,12 @@
 <app-navbar></app-navbar>
 <div class="container-fluid" id="con1">
   <div class="container-fluid">
-    <h2 class="">shop now</h2>
+    <div class="row">
+      <div class="col-12 col-md-6">
+        <img src="../assets/BB-Logo.png" alt="" />
+      </div>
+      <div class="col-md-6 d-none d-md-block"></div>
+    </div>
   </div>
 </div>
 
