--- a/src/app/home1/home1.component.css
+++ b/src/app/home1/home1.component.css
@@ -5,45 +5,54 @@
   height: 100vh;
   align-items: center;
 }
-
-#con1 .animated-btn {
+.cssbuttons-io {
   position: relative;
-  padding: 10px 20px;
-  font-size: 16px;
-  color: #fff;
-  background-color: #ffebd4;
-  border: none;
-  border-radius: 5px;
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 18px;
+
+  border-radius: 0;
   cursor: pointer;
+  border: none;
+  background: #111;
+  color: ghostwhite;
   overflow: hidden;
-  outline: none;
-  transition: color 0.4s ease-in, background-color 0.4s ease;
 }
 
-#con1 .animated-btn::before {
-  content: "";
+.cssbuttons-io span {
+  position: relative;
+  z-index: 10;
+  transition: color 0.4s;
+  display: inline-flex;
+  align-items: center;
+  padding: 10px 20px;
+}
+
+.cssbuttons-io::before,
+.cssbuttons-io::after {
   position: absolute;
   top: 0;
-  left: -100%;
+  left: 0;
   width: 100%;
   height: 100%;
-  background-color: #2ecc71;
-  transition: left 0.4s ease;
   z-index: 0;
 }
 
-#con1 .animated-btn:hover::before {
-  left: 0;
+.cssbuttons-io::before {
+  content: "";
+  background: rgb(242, 226, 204);
+  width: 120%;
+  left: -10%;
+  transform: skew(30deg);
+  transition: transform 0.4s cubic-bezier(0.3, 1, 0.8, 1);
 }
 
-#con1 .animated-btn:hover {
-  color: #fff;
-  background-color: transparent;
+.cssbuttons-io:hover::before {
+  transform: translate3d(100%, 0, 0);
 }
 
-#con1 .animated-btn span {
-  position: relative;
-  z-index: 1;
+.cssbuttons-io:active {
+  transform: scale(0.95);
 }
 #con1 .row {
   margin-top: 6pc;
@@ -67,13 +76,6 @@
   font-weight: 200;
   font-size: 18px;
   margin-top: 1pc;
-}
-#con1 .btn {
-  margin-top: 3pc;
-  font-family: "Times New Roman", Times, serif;
-  border-radius: 0px;
-  background: rgb(228, 220, 193);
-  padding: 10px 45px;
 }
 
 .content {
